Qt ui file, compliant file names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,16 @@ cmake_minimum_required(VERSION 2.8.11)
 
 project(qt-sudoku)
 
+#if(WIN32)
+    set(CMAKE_PREFIX_PATH "C:\\Qt\\5.9.1\\msvc2015_64\\")
+#endif()
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
 
 find_package(Qt5Widgets)
 
-file(GLOB SOURCES src/*.cpp)
+file(GLOB SOURCES src/*.cpp src/*.h)
 
-#if(WIN32)
-#    add_executable(qt-sudoku WIN32 main.cpp)
-#else()
-    add_executable(qt-sudoku ${SOURCES})
-#endif()
+add_executable(qt-sudoku ${SOURCES})
 
 target_link_libraries(qt-sudoku Qt5::Widgets)
