Fix gcc warnings, invalid code, add [][] sudoku access

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,34 @@ set(CMAKE_AUTOUIC ON)
 
 find_package(Qt5Widgets)
 
+set(CXX_FLAGS "")
+if(CMAKE_COMPILER_IS_GNUCC)
+    list(APPEND CXX_FLAGS
+      -O3 -ffast-math -pedantic -Wall -Wextra -Wcast-align
+      -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2
+      -Winit-self -Wmissing-declarations -Wmissing-include-dirs
+      -Wold-style-cast -Woverloaded-virtual -Wredundant-decls
+      -Wsign-conversion -Wsign-promo -Wswitch-default
+      -Wundef -Weffc++
+      -Wlogical-op
+      -Wnoexcept
+      -Wstrict-null-sentinel
+      -fdiagnostics-color=always
+      -Wswitch-bool
+      -Wlogical-not-parentheses
+      -Wsizeof-array-argument
+      -Wbool-compare
+      -std=c++1z
+      -Wshift-negative-value
+      -Wshift-overflow=2
+      -Wnull-dereference
+      -Wduplicated-cond
+    )
+endif()
+
 file(GLOB SOURCES src/*.cpp src/*.h)
 
 add_executable(qt-sudoku ${SOURCES})
+target_compile_options(qt-sudoku PUBLIC ${CXX_FLAGS})
 
 target_link_libraries(qt-sudoku Qt5::Widgets)
